--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -1,21 +1,20 @@
 ﻿<!DOCTYPE html>
-
 <html lang="pt-br>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width" />
+<meta name="author" content="Thales Lima">
+<meta name="description" content="mvCommerce ASP.NET">
 <title>@ViewBag.Title</title>
 
-<meta name="description" content="mvCommerce ASP.NET">
-<meta name="author" content="Elias Ribeiro">
-
-<link rel="stylesheet" href="/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/resources/lib/caroussel/carousel.css" />
-<link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/ui.css" />
-<link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-<link rel="stylesheet" href="~/css/site.css" />
-
+<environment include="Development">
+    <link rel="stylesheet" href="/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/resources/lib/caroussel/carousel.css" />
+    <link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/ui.css" />
+    <link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/site.css" />
+</environment>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-purple">
@@ -47,11 +46,8 @@
                         <a class="nav-link" href="/Home/Contact"><i class="far fa-address-book"></i> Contato </a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-
-
-
-                    <input class="form-control mr-sm-2" type="search" placeholder="palavra" aria-label="Search">
+                <form class="form-inline my-2 my-lg-0" id="formMenu">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Pesquise aqui!" aria-label="Search">
                     <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Pesquisar</button>
                     <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/Login" id="login"><i class="fas fa-user-alt"></i> Login</a>
                     <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/ShoppingCart" id="cart"><i class="fas fa-shopping-cart"></i> Carrinho</a>
@@ -73,9 +69,12 @@
       ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="/resources/lib/holder/holder.min.js"></script>
-    <script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
-    <script src="/resources/lib/popper1.14.6/popper.min.js"></script>
-    <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+    <environment include="Development">
+        <script src="/resources/lib/holder/holder.min.js"></script>
+        <script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
+        <script src="/resources/lib/popper1.14.6/popper.min.js"></script>
+        <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+    </environment>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
