--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -2,25 +2,47 @@
     padding-top: 50px;
     padding-bottom: 20px;
     background-color: #e9e9e9;
-    margin: 0px;
 }
-a{
+
+#formMenu input[type= "search"]{
+    border: 0;
+    color: white;
+    background: none;
+    display: block;
+    margin: 5px auto;
+    text-align: center;
+    border: 2px solid #ffbe76;
+    padding: 14px 10px;
+    width: 250px;
+    outline: none;
+    transition: 0.25s;
+}
+
+#formMenu input[type="search"]:focus {
+    width: 350px;
+    border-color: #eb4d4b;
+}
+    
+a {
     color: mediumpurple;
 }
+
 hr {
-    background-color:mediumpurple;
+    background-color: mediumpurple;
 }
-#login{
-    margin-left:5px;
+
+#login {
+    margin-left: 550px;
 }
-#cart{
-    margin-left:5px;
+
+#cart {
+    margin-left: 5px;
 }
-.card{
-    border:inset;
-    border-color:mediumpurple;
+
+.card {
+    box-shadow: 1px 2px 10px 3px mediumpurple;
 }
+
 .box {
-    border: inset;
-    border-color: mediumpurple;
+    box-shadow: 1px 2px 10px 3px mediumpurple;
 }
