Implementing success message and error message

--- a/mvCommerce/Views/Home/Login.cshtml
+++ b/mvCommerce/Views/Home/Login.cshtml
@@ -2,10 +2,14 @@
 @{
     ViewData["Title"] = "Login";
 }
+<head>
+
+</head>
+<body>
     <main role="main">
         <br />
         <br />
-        <section class="container" >
+        <section class="container">
             <aside class="col-sm-4">
                 <h3 class="subtitle-doc">
                     # Login form simple
@@ -41,4 +45,5 @@
             </aside>
         </section>
     </main>
+</body>
 
