--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 </environment>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-purple">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-purple" id="navMenu">
             <a class="navbar-brand" href="/"> mvCommerce</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,8 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0" id="formMenu">
                     <input class="form-control mr-sm-2" type="search" placeholder="Pesquise aqui!" aria-label="Search">
-                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Pesquisar</button>
+                    <div id="searchButton" class="btn btn-outline-warning my-2 my-sm-0"><i class="fas fa-search"></i></div>
+                    @*<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Pesquisar</button>*@
                     <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/Login" id="login"><i class="fas fa-user-alt"></i> Login</a>
                     <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/ShoppingCart" id="cart"><i class="fas fa-shopping-cart"></i> Carrinho</a>
                 </form>
