--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -4,7 +4,7 @@
     background-color: #e9e9e9;
 }
 
-#formMenu input[type= "search"]{
+#formMenu  input[type= "search"] {
     border: 0;
     color: white;
     background: none;
@@ -20,9 +20,8 @@
 
 #formMenu input[type="search"]:focus {
     width: 350px;
-    border-color: #eb4d4b;
+    border-color: #130f40;
 }
-    
 a {
     color: mediumpurple;
 }
