--- a/mvCommerce/Views/Home/RegisterClient.cshtml
+++ b/mvCommerce/Views/Home/RegisterClient.cshtml
@@ -1,89 +1,82 @@
-﻿
+﻿@model Client
 @{
     ViewData["Title"] = "RegisterClient";
 }
 
-    <main role="main">
-
+<main role="main">
+    <form asp-action="RegisterClient" asp-controller="Home" method="post">
         <section class="container" style="margin-top: 50px">
             <div class="row">
-                <aside class="col-sm-6" >
+                <aside class="col-sm-6">
                     <h3 class="subtitle-doc">
-                        # Register simple
-                        <a href="#" data-html="code_register_1" class="showcode">[code]</a>
+                        Cadastre-se
                     </h3>
                     <div id="code_register_1">
                         <div class="card">
                             <header class="card-header">
-                                <a href="/Home/Login" class="float-right btn btn-outline-warning my-2 my-sm-0">Log in</a>
-                                <h4 class="card-title mt-2">Sign up</h4>
+                                <a asp-controller="Home" asp-action="Login" class="float-right btn btn-outline-warning my-2 my-sm-0 bg-purple">Login</a>
                             </header>
                             <article class="card-body">
-                                <form>
-                                    <div class="form-row">
-                                        <div class="col form-group">
-                                            <label>First name</label>
-                                            <input type="text" class="form-control" placeholder="">
-                                        </div> <!-- form-group end.// -->
-                                        <div class="col form-group">
-                                            <label>Last name</label>
-                                            <input type="text" class="form-control" placeholder="">
-                                        </div> <!-- form-group end.// -->
-                                    </div> <!-- form-row end.// -->
-                                    <div class="form-group">
-                                        <label>Email address</label>
-                                        <input type="email" class="form-control" placeholder="">
-                                        <small class="form-text text-muted">
-                                            We'll never share your email with anyone
-                                            else.
-                                        </small>
-                                    </div> <!-- form-group end.// -->
-                                    <div class="form-group">
-                                        <label class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="gender" value="option1">
-                                            <span class="form-check-label"> Male </span>
-                                        </label>
-                                        <label class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="gender" value="option2">
-                                            <span class="form-check-label"> Female</span>
-                                        </label>
-                                    </div> <!-- form-group end.// -->
-                                    <div class="form-row">
-                                        <div class="form-group col-md-6">
-                                            <label>City</label>
-                                            <input type="text" class="form-control">
-                                        </div> <!-- form-group end.// -->
-                                        <div class="form-group col-md-6">
-                                            <label>Country</label>
-                                            <select id="inputState" class="form-control">
-                                                <option> Choose...</option>
-                                                <option>Uzbekistan</option>
-                                                <option>Russia</option>
-                                                <option selected="">United States</option>
-                                                <option>India</option>
-                                                <option>Afganistan</option>
-                                            </select>
-                                        </div> <!-- form-group end.// -->
-                                    </div> <!-- form-row.// -->
-                                    <div class="form-group">
-                                        <label>Create password</label>
-                                        <input class="form-control" type="password">
-                                    </div> <!-- form-group end.// -->
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-primary btn-block btn-outline-warning bg-purple my-2 my-sm-0"> Register </button>
-                                    </div> <!-- form-group// -->
-                                    <small class="text-muted">
-                                        By clicking the 'Sign Up' button, you confirm that you
-                                        accept our <br> Terms of use and Privacy Policy.
-                                    </small>
-                                </form>
-                            </article> <!-- card-body end .// -->
-                            <div class="border-top card-body text-center ">Have an account? <a href="">Log In</a></div>
-                        </div> <!-- card.// -->
+                                <div class="form-row">
 
-                    </div> <!-- code-wrap.// -->
+                                    <div class="col form-group">
+                                        <label asp-for="Name">Nome</label>
+                                        <input asp-for="Name" type="text" class="form-control" placeholder="Nome">
+                                    </div>
+
+                                    <div class="col form-group">
+                                        <label asp-for="BirthDate">Data de Nascimento</label>
+                                        <input asp-for="BirthDate" type="text" class="form-control" placeholder="Data de Nascimento">
+                                    </div>
+                                </div>
+                                <div class="form-row col form-group">
+                                    <label asp-for="CPF">CPF</label>
+                                    <input asp-for="CPF" type="text" class="form-control" placeholder="">
+                                </div>
+
+                                <label>Sexo</label>
+                                <div class="form-group">
+                                    <label class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" value="option1">
+                                        <span class="form-check-label"> Masculino </span>
+                                    </label>
+                                    <label class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" value="option2">
+                                        <span class="form-check-label"> Feminino </span>
+                                    </label>
+                                </div>
+
+                                <div class="col form-group col-sm-5">
+                                    <label asp-for="Phone">Telefone</label>
+                                    <input asp-for="Phone" type="text" class="form-control" placeholder="">
+                                </div>
+
+                                <div class="form-group">
+                                    <label asp-for="Email">Email</label>
+                                    <input asp-for="Email" type="email" class="form-control" placeholder="">
+                                    <small>
+                                        Nunca compartilhe seu email com outras pessoas.
+                                    </small>
+                                </div>
+
+                                <div class="form-group">
+                                    <label asp-for="Password">Criar senha</label>
+                                    <input asp-for="Password" class="form-control" type="password">
+                                    <small>
+                                        Nunca compartilhe sua senha com outras pessoas.
+                                    </small>
+                                </div>
+
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-primary btn-block btn-outline-warning bg-purple my-2 my-sm-0"> Cadastrar </button>
+                                </div>
+                            </article>
+                            <div class="border-top card-body text-center ">Já possui uma conta? <a asp-controller="Home" asp-action="Login">Clique aqui</a></div>
+                        </div>
+                    </div>
                 </aside>
             </div>
         </section>
-    </main>
+    </form>
+</main>
 
