--- a/mvCommerce/Views/Home/RegisterClient.cshtml
+++ b/mvCommerce/Views/Home/RegisterClient.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewData["Title"] = "RegisterClient";
 }
-
+<head>
+    <link rel="stylesheet" href="~/css/RegisterClient.css"/>
+</head>
 <main role="main">
     <form asp-action="RegisterClient" asp-controller="Home" method="post">
         <section class="container" style="margin-top: 50px">
@@ -17,43 +19,54 @@
                                 <a asp-controller="Home" asp-action="Login" class="float-right btn btn-outline-warning my-2 my-sm-0 bg-purple">Login</a>
                             </header>
                             <article class="card-body">
+                                @if (TempData["MSG_S"] != null)
+                                {
+                                    <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
+                                }
                                 <div class="form-row">
 
                                     <div class="col form-group">
                                         <label asp-for="Name">Nome</label>
                                         <input asp-for="Name" type="text" class="form-control" placeholder="Nome">
+                                        <span asp-validation-for="Name"></span>
                                     </div>
 
                                     <div class="col form-group">
                                         <label asp-for="BirthDate">Data de Nascimento</label>
                                         <input asp-for="BirthDate" type="text" class="form-control" placeholder="Data de Nascimento">
+                                        <span  asp-validation-for="BirthDate"></span>
                                     </div>
                                 </div>
                                 <div class="form-row col form-group">
                                     <label asp-for="CPF">CPF</label>
                                     <input asp-for="CPF" type="text" class="form-control" placeholder="">
+                                    <span  asp-validation-for="CPF"></span>
                                 </div>
 
                                 <label>Sexo</label>
                                 <div class="form-group">
                                     <label class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" value="option1">
-                                        <span class="form-check-label"> Masculino </span>
+                                        <input class="form-check-input" type="radio" asp-for="Sex" value="M">
+                                        <span > Masculino </span>
                                     </label>
                                     <label class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" value="option2">
-                                        <span class="form-check-label"> Feminino </span>
+                                        <input class="form-check-input" type="radio" asp-for="Sex" value="F">
+                                        <span > Feminino </span>
                                     </label>
+                                    <br />
+                                    <span asp-validation-for="Sex"></span>
                                 </div>
 
                                 <div class="col form-group col-sm-5">
                                     <label asp-for="Phone">Telefone</label>
                                     <input asp-for="Phone" type="text" class="form-control" placeholder="">
+                                    <span  asp-validation-for="Phone"></span>
                                 </div>
 
                                 <div class="form-group">
                                     <label asp-for="Email">Email</label>
                                     <input asp-for="Email" type="email" class="form-control" placeholder="">
+                                    <span  asp-validation-for="Email"></span>
                                     <small>
                                         Nunca compartilhe seu email com outras pessoas.
                                     </small>
@@ -62,6 +75,7 @@
                                 <div class="form-group">
                                     <label asp-for="Password">Criar senha</label>
                                     <input asp-for="Password" class="form-control" type="password">
+                                    <span  asp-validation-for="Password"></span>
                                     <small>
                                         Nunca compartilhe sua senha com outras pessoas.
                                     </small>
