--- a/mvCommerce/Views/Home/Login.cshtml
+++ b/mvCommerce/Views/Home/Login.cshtml
@@ -17,21 +17,25 @@
                 <div id="code_login_1">
                     <div class="card">
                         <article class="card-body">
+                            @if (ViewData["MSG_E"] != null)
+                            {
+                                <p class="alert alert-danger"><b>@Html.Raw(ViewData["MSG_E"])</b></p>
+                            }
                             <a asp-action="RegisterClient" asp-controller="Home" class="btn btn-outline-warning bg-purple my-2 my-sm-0 float-right" id="signUp">Cadastre-se</a>
                             <h4 class="card-title mb-4 mt-1">Entrar</h4>
                             <form method="post">
                                 <div class="form-group">
                                     <label>E-mail</label>
                                     <input asp-for="Email" class="form-control" placeholder="Email" type="email">
-                                </div> 
+                                </div>
                                 <div class="form-group">
                                     <a class="float-right" href="#">Esqueceu sua senha?</a>
-                                    <label >Senha</label>
+                                    <label>Senha</label>
                                     <input asp-for="Password" class="form-control" type="password">
                                 </div>
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-outline-warning bg-purple my-2 my-sm-0"> Entrar </button>
-                                </div> 
+                                </div>
                             </form>
                         </article>
                     </div> 
