Change in layout style

--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -35,11 +35,11 @@
                            aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-list-ul"></i> Categorias
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                        <div id="categoriesDropdown" class="dropdown-menu bg-purple" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#"><b>Action</b></a>
+                            <a class="dropdown-item" href="#"><b>Another action</b></a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#"><b>Something else here</b></a>
                         </div>
                     </li>
                     <li class="nav-item">
