Refactoring color style of app

--- a/mvCommerce/Views/Home/Contact.cshtml
+++ b/mvCommerce/Views/Home/Contact.cshtml
@@ -82,7 +82,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button class="subscribe btn btn-primary btn-block btn-outline-warning bg-purple my-2 my-sm-0" type="submit"> Enviar </button>
+                                        <button class="subscribe btn btn-primary btn-block btn-outline-warning bg-info my-2 my-sm-0" type="submit"> Enviar </button>
                                     </form>
                                 </div>
                             </article>
