--- a/mvCommerce/Views/Home/Index.cshtml
+++ b/mvCommerce/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
                             </div> <!-- rating-wrap.// -->
                         </figcaption>
                         <div class="bottom-wrap">
-                            <a id="card" href="" class="btn btn-outline-warning bg-purple my-2 my-sm-0">Order Now</a>
+                            <a id="card" href="" class="btn btn-outline-warning bg-info my-2 my-sm-0">Order Now</a>
                             <div class="price-wrap h5">
                                 <span class="price-new">$1280</span> <del class="price-old">$1980</del>
                             </div> <!-- price-wrap.// -->
@@ -119,7 +119,7 @@
                             </div> <!-- rating-wrap.// -->
                         </figcaption>
                         <div class="bottom-wrap">
-                            <a id="card" href="" class="btn btn-outline-warning bg-purple my-2 my-sm-0">Order Now</a>
+                            <a id="card" href="" class="btn btn-outline-warning bg-info my-2 my-sm-0">Order Now</a>
                             <div class="price-wrap h5">
                                 <span class="price-new">$1280</span> <del class="price-old">$1980</del>
                             </div> <!-- price-wrap.// -->
@@ -146,7 +146,7 @@
                             </div> <!-- rating-wrap.// -->
                         </figcaption>
                         <div class="bottom-wrap">
-                            <a id="card" href="" class="btn btn-outline-warning bg-purple my-2 my-sm-0">Order Now</a>
+                            <a id="card" href="" class="btn btn-outline-warning bg-info my-2 my-sm-0">Order Now</a>
                             <div class="price-wrap h5">
                                 <span class="price-new">$1280</span> <del class="price-old">$1980</del>
                             </div> <!-- price-wrap.// -->
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <button class="subscribe btn btn-block btn-outline-warning bg-purple" type="submit" id="registerNewsletter"> Cadastrar </button>
+                    <button class="subscribe btn btn-block btn-outline-warning bg-info" type="submit" id="registerNewsletter"> Cadastrar </button>
                 </div>
             </div>
         </div>
