--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 </environment>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-purple" id="navMenu">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-info" id="navMenu">
             <a class="navbar-brand" href="/"> mvCommerce</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
                            aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-list-ul"></i> Categorias
                         </a>
-                        <div id="categoriesDropdown" class="dropdown-menu bg-purple" aria-labelledby="navbarDropdown">
+                        <div id="categoriesDropdown" class="dropdown-menu bg-info" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><b>Action</b></a>
                             <a class="dropdown-item" href="#"><b>Another action</b></a>
                             <div class="dropdown-divider"></div>
