--- a/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     <link href="dashboard.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-info">
         <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">mvCommerce</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
         <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
-                <a class="nav-link" asp-action="Logout">Sair</a>
+                <a class="btn btn-outline-warning my-2 my-sm-0" asp-action="Logout">Sair</a>
             </li>
         </ul>
     </nav>
