--- a/mvCommerce/Areas/Collaborator/Views/_ViewImports.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using mvCommerce
 @using mvCommerce.Models
+@using X.PagedList.Mvc.Core; 
+@using X.PagedList;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
