--- a/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
@@ -2,10 +2,39 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
-@foreach (Category category in Model)
+<h1>Categorias</h1>
+<a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
+@if (Model.Count > 0)
 {
-    @category.Name<br />
+    <div class="table-responsive" style="margin-top:10px">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Categoria Pai</th>
+                    <th scope="col">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Category category in Model)
+                {
+                    <tr>
+                        <th scope="row">@category.Id</th>
+                        <td>@category.Name</td>
+                        <td>@category.CategoryFatherId</td>
+                        <td>
+                            <a asp-action="Update" asp-route-id="@category.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Editar</a>
+                            <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-outline-danger my-2 my-sm-0">Excluir</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
 }
-@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
+else
+{
+    <span>Nenhum registro cadastrado!</span>
+}
