--- a/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
@@ -2,8 +2,14 @@
 @{
     ViewData["Title"] = "Index";
 }
+
+@if (TempData["MSG_S"] != null)
+{
+    <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
+}
 <h1>Categorias</h1>
 <a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
+
 @if (Model.Count > 0)
 {
     <div class="table-responsive" style="margin-top:10px">
@@ -22,7 +28,11 @@
                     <tr>
                         <th scope="row">@category.Id</th>
                         <td>@category.Name</td>
-                        <td>@category.CategoryFatherId</td>
+                        <td>
+                            @Html.DisplayFor(model => category.CategoryFather.Id)
+                            -
+                            @Html.DisplayFor(model => category.CategoryFather.Name)
+                        </td>
                         <td>
                             <a asp-action="Update" asp-route-id="@category.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Editar</a>
                             <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-outline-danger my-2 my-sm-0">Excluir</a>
