Collaborator area - update category

--- a/mvCommerce/Views/Home/Contact.cshtml
+++ b/mvCommerce/Views/Home/Contact.cshtml
@@ -17,7 +17,7 @@
                             # Outros contatos
                             <a href="#" data-html="code_desc_simple" class="showcode">[code]</a>
                         </h4>
-                        <div id="code_desc_simple" class="card">
+                        <div id="code_desc_simple" class="box">
                             <div class="box">
                                 <dl>
                                     <dt>Devolução/Garantia: </dt>
@@ -82,7 +82,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button class="subscribe btn btn-primary btn-block btn-outline-warning bg-info my-2 my-sm-0" type="submit"> Enviar </button>
+                                        <button class="subscribe btn btn-block btn-info my-2 my-sm-0" type="submit"> Enviar </button>
                                     </form>
                                 </div>
                             </article>
