--- a/mvCommerce/Views/Home/Login.cshtml
+++ b/mvCommerce/Views/Home/Login.cshtml
@@ -21,7 +21,7 @@
                             {
                                 <p class="alert alert-danger"><b>@Html.Raw(ViewData["MSG_E"])</b></p>
                             }
-                            <a asp-action="RegisterClient" asp-controller="Home" class="btn btn-outline-warning bg-info my-2 my-sm-0 float-right" id="signUp">Cadastre-se</a>
+                            <a asp-action="RegisterClient" asp-controller="Home" class="btn btn-outline-info my-2 my-sm-0 float-right" id="signUp">Cadastre-se</a>
                             <h4 class="card-title mb-4 mt-1">Entrar</h4>
                             <form method="post">
                                 <div class="form-group">
@@ -34,7 +34,7 @@
                                     <input asp-for="Password" class="form-control" type="password" placeholder="*****">
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-outline-warning bg-info my-2 my-sm-0"> Entrar </button>
+                                    <button type="submit" class="btn btn-info my-2 my-sm-0"> Entrar </button>
                                 </div>
                             </form>
                         </article>
