--- a/mvCommerce/Views/Home/RegisterClient.cshtml
+++ b/mvCommerce/Views/Home/RegisterClient.cshtml
@@ -16,7 +16,7 @@
                     <div id="code_register_1">
                         <div class="card">
                             <header class="card-header">
-                                <a asp-controller="Home" asp-action="Login" class="float-right btn btn-outline-warning my-2 my-sm-0 bg-info">Login</a>
+                                <a asp-controller="Home" asp-action="Login" class="float-right btn btn-outline-info my-2 my-sm-0">Login</a>
                             </header>
                             <article class="card-body">
                                 @if (TempData["MSG_S"] != null)
@@ -82,7 +82,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block btn-outline-warning bg-info my-2 my-sm-0"> Cadastrar </button>
+                                    <button type="submit" class="btn btn-primary btn-block btn btn-info my-2 my-sm-0"> Cadastrar </button>
                                 </div>
                             </article>
                             <div class="border-top card-body text-center ">Já possui uma conta? <a asp-controller="Home" asp-action="Login">Clique aqui</a></div>
