--- a/mvCommerce/Views/Home/ShoppingCart.cshtml
+++ b/mvCommerce/Views/Home/ShoppingCart.cshtml
@@ -149,7 +149,7 @@
                         # Cálculo de frete
                         <a href="#" data-html="code_desc_simple" class="showcode">[code]</a>
                     </h4>
-                    <div id="code_desc_simple">
+                    <div id="code_desc_simple" class="box">
                         <div class="box">
                             <dl>
                                 <dt>Some info: </dt>
@@ -174,7 +174,7 @@
                         # Cupom desconto
                         <a href="#" data-html="code_desc_align" class="showcode">[code]</a>
                     </h4>
-                    <div id="code_desc_align">
+                    <div id="code_desc_align" class="box">
                         <div class="box">
                             <dl class="dlist-align">
                                 <dt>Some info: </dt>
@@ -200,7 +200,7 @@
                         # Total a pagar
                         <a href="#" data-html="code_desc_right" class="showcode">[code]</a>
                     </h4>
-                    <div id="code_desc_right">
+                    <div id="code_desc_right" class="box">
                         <div class="box">
                             <dl class="dlist-align">
                                 <dt>Parameter: </dt>
