--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -42,7 +42,7 @@ hr {
 }
 
 .box {
-    box-shadow: 1px 1px 1px 2px #00CED1;
+    box-shadow: 1px 1px 1px 2px #d3d3d3;
 }
 #categoriesDropdown {
     background-color: #9980FA;
