--- a/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
@@ -35,7 +35,7 @@
                         </td>
                         <td>
                             <a asp-action="Update" asp-route-id="@category.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Editar</a>
-                            <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-outline-danger my-2 my-sm-0">Excluir</a>
+                            <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-outline-danger alert-danger my-2 my-sm-0" id="delete" onclick="alert_it()">Excluir</a>
                         </td>
                     </tr>
                 }
