--- a/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
@@ -133,13 +133,13 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
 
                 @RenderBody()
-           
+
             </main>
         </div>
     </div>
     <script src="~/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
     <script>window.jQuery || document.write('<script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js<\/script>')</script>
-    <script src="~/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
+    <script src="~/js/Actions.js"></script>
     <script src="~/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/resources/lib/feather/feather.js"></script>
     <script src="~/resources/lib/charts/charts.js"></script>
