--- a/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
@@ -16,9 +16,9 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Categoria Pai</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Id)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Name)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().CategoryFatherId)</th>
                     <th scope="col">Ações</th>
                 </tr>
             </thead>
