--- a/mvCommerce/Areas/Collaborator/Views/Home/Login.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Home/Login.cshtml
@@ -34,7 +34,7 @@
                                     <input asp-for="Password" class="form-control" type="password" placeholder="*****">
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-outline-warning bg-info my-2 my-sm-0"> Entrar </button>
+                                    <button type="submit" class="btn btn-info my-2 my-sm-0"> Entrar </button>
                                 </div>
                             </form>
                         </article>
