--- a/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
@@ -9,7 +9,8 @@
 }
 <h1>Categorias</h1>
 <a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
-
+<br />
+<br />
 @if (Model.Count > 0)
 {
     <div class="table-responsive" style="margin-top:10px">
@@ -46,5 +47,5 @@
 }
 else
 {
-    <span>Nenhum registro cadastrado!</span>
+    <span>Nenhuma categoria cadastrado!</span>
 }
