Creating view for the register collaborator and logic in controller

--- a/mvCommerce/Areas/Collaborator/Views/Category/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Register.cshtml
@@ -8,12 +8,12 @@
 <form method="post">
     <div class="form-group">
         <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" placeholder="Digite o nome da categoria">
+        <input asp-for="Name" class="form-control" placeholder="Digite o nome">
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Slug"></label>
-        <input asp-for="Slug" class="form-control" placeholder="Digite o slug da categoria">
+        <input asp-for="Slug" class="form-control" placeholder="Digite o slug">
         <span asp-validation-for="Slug" class="text-danger"></span>
     </div>
     <div class="form-group">
