Including Display name in contact

--- a/mvCommerce/Views/Home/Contact.cshtml
+++ b/mvCommerce/Views/Home/Contact.cshtml
@@ -75,7 +75,7 @@
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <div class="form-group">
-                                                    <label for="text"><span class="hidden-xs">Texto</span></label>
+                                                    <label for="text"><span class="hidden-xs">Mensagem</span></label>
                                                     <div class="form-inline">
                                                         <textarea class="form-control" name="text" id="text" style="width:100%">@(contact != null ? contact.Text : "")</textarea>
                                                     </div>
