--- a/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
@@ -31,6 +31,7 @@
                         <td>@collaborator.Name</td>
                         <td>@collaborator.Email</td>
                         <td>
+                            <a asp-action="GeneratePassword" asp-route-id="@collaborator.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Gerar Senha</a>
                             <a asp-action="Update" asp-route-id="@collaborator.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Editar</a>
                             <a asp-action="Delete" asp-route-id="@collaborator.Id" class="btn btn-outline-danger alert-danger my-2 my-sm-0" id="delete" onclick="alert_it()">Excluir</a>
                         </td>
