Adjusting single email in the edition and implementing link for collaborator

--- a/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
@@ -7,7 +7,7 @@
 {
     <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
 }
-<h1>Colaborador</h1>
+<h1>Colaboradores</h1>
 <a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
 <br />
 <br />
