--- a/mvCommerce/Areas/Collaborator/Views/_ViewImports.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using mvCommerce.Models
 @using X.PagedList.Mvc.Core; 
 @using X.PagedList;
+@using mvCommerce.Models.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
