Implementing product register

--- a/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
     <meta name="generator" content="Jekyll v4.0.1">
     <title>@ViewBag.Title</title>
 
+        <link href="~/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+
+
     <!-- Bootstrap core CSS -->
     <link href="~/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/resources/lib/paged-list/paged-list.css" rel="stylesheet" type="text/css"/>
