--- a/mvCommerce/Areas/Collaborator/Views/Product/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Index.cshtml
@@ -7,7 +7,9 @@
 {
     <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
 }
+
 <h1>Produtos</h1>
+
 <br />
 <br />
 
@@ -23,6 +25,7 @@
 
 <br />
 <br />
+<a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
 @if (Model.Count > 0)
 {
     <div class="table-responsive" style="margin-top:10px">
@@ -39,16 +42,16 @@
             <tbody>
                 @foreach (Product product in Model)
                 {
-                <tr>
-                    <th scope="row">@product.Id</th>
-                    <td>@product.Name</td>
-                    <td>@product.CategoryId</td>
-                    <td>@product.Price</td>
-                    <td>
-                        <a asp-action="Update" asp-route-id="@product.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Editar</a>
-                        <a asp-action="Delete" asp-route-id="@product.Id" class="btn btn-outline-danger alert-danger my-2 my-sm-0" id="delete" onclick="alert_it()">Excluir</a>
-                    </td>
-                </tr>
+                    <tr>
+                        <th scope="row">@product.Id</th>
+                        <td>@product.Name</td>
+                        <td>@product.CategoryId</td>
+                        <td>@product.Price</td>
+                        <td>
+                            <a asp-action="Update" asp-route-id="@product.Id" class="btn btn-outline-info my-2 my-sm-0" style="margin-right:5px">Editar</a>
+                            <a asp-action="Delete" asp-route-id="@product.Id" class="btn btn-outline-danger alert-danger my-2 my-sm-0" id="delete" onclick="alert_it()">Excluir</a>
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
