--- a/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
@@ -6,114 +6,125 @@
 <h1>Cadastrar</h1>
 
 <form method="post">
-    <div class="form-group">
-        <label asp-for="CategoryId"></label>
-        <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.Categories">
-            <option value="" disabled selected>Selecione a categoria</option>
-            <option value=""> </option>
-        </select>
-        <span asp-validation-for="CategoryId" class="text-danger"></span>
-    </div>
-    
-    <div class="form-group">
-        <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" placeholder="Digite o nome do produto" />
-        <span asp-validation-for="Name" class="text-danger"></span>
+    <div class="row">
+        <div class="form-group col-md-4">
+            <label asp-for="Name"></label>
+            <input asp-for="Name" class="form-control" placeholder="Digite o nome do produto" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+
+        <div class="form-group col-md-4">
+            <label asp-for="CategoryId"></label>
+            <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.Categories">
+                <option value="" disabled selected>Selecione a categoria</option>
+                <option value=""> </option>
+            </select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
     </div>
 
-    <div class="form-group">
+    <div class="row">
+        <div class="form-group col-md-2">
+            <div class="form-group">
+                <label asp-for="Price"></label>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">R$</div>
+                    </div>
+                    <input asp-for="Price" class="form-control" placeholder="Preço" />
+                </div>
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group col-md-2">
+            <div class="form-group">
+                <label asp-for="Amount"></label>
+                <div class="input-group mb-2">
+                    <input type="number" asp-for="Amount" class="form-control">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">Un</div>
+                    </div>
+                </div>
+                <span asp-validation-for="Amount" class="text-danger"></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group col-md-8">
         <label asp-for="Description"></label>
         <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <div class="form-group">
-            <label asp-for="Price"></label>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">R$</div>
-                </div>
-                <input asp-for="Price" class="form-control" placeholder="Digite o preço do produto" />
-            </div>
-            <span asp-validation-for="Price" class="text-danger"></span>
-        </div>
-    </div>
 
-    <div class="form-group">
-        <div class="form-group">
-            <label asp-for="Amount"></label>
-            <div class="input-group mb-2">
-                <input type="number" asp-for="Amount" class="form-control">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Un</div>
-                </div>
-            </div>
-            <span asp-validation-for="Amount" class="text-danger"></span>
-        </div>
-    </div>
+
+
 
     <!--Fields of Freight-->
-    <div class="form-group">
-        <div class="form-group">
-            <label asp-for="Weight"></label>
-            <div class="input-group mb-2">
-                <input asp-for="Weight" class="form-control">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Kg</div>
+    <h2>Frete</h2>
+    <div class="row">
+        <div class="form-group col-md-3">
+            <div class="form-group">
+                <label asp-for="Weight"></label>
+                <div class="input-group mb-2">
+                    <input asp-for="Weight" class="form-control">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">Kg</div>
+                    </div>
                 </div>
+                <span asp-validation-for="Weight" class="text-danger"></span>
             </div>
-            <span asp-validation-for="Weight" class="text-danger"></span>
+        </div>
+
+        <div class="form-group col-md-3">
+            <div class="form-group">
+                <label asp-for="Width"></label>
+                <div class="input-group mb-2">
+                    <input asp-for="Width" class="form-control">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">cm</div>
+                    </div>
+                </div>
+                <span asp-validation-for="Width" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group col-md-3">
+            <div class="form-group">
+                <label asp-for="Height"></label>
+                <div class="input-group mb-2">
+                    <input asp-for="Height" class="form-control">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">cm</div>
+                    </div>
+                </div>
+                <span asp-validation-for="Height" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group col-md-3">
+            <div class="form-group">
+                <label asp-for="Length"></label>
+                <div class="input-group mb-2">
+                    <input asp-for="Length" class="form-control">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">cm</div>
+                    </div>
+                </div>
+                <span asp-validation-for="Length" class="text-danger"></span>
+            </div>
         </div>
     </div>
-
-    <div class="form-group">
-        <div class="form-group">
-            <label asp-for="Width"></label>
-            <div class="input-group mb-2">
-                <input asp-for="Width" class="form-control">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">cm</div>
-                </div>
-            </div>
-            <span asp-validation-for="Width" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="form-group">
-            <label asp-for="Height"></label>
-            <div class="input-group mb-2">
-                <input asp-for="Height" class="form-control">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">cm</div>
-                </div>
-            </div>
-            <span asp-validation-for="Height" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="form-group">
-            <label asp-for="Length"></label>
-            <div class="input-group mb-2">
-                <input asp-for="Length" class="form-control">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">cm</div>
-                </div>
-            </div>
-            <span asp-validation-for="Length" class="text-danger"></span>
-        </div>
-    </div>
-
+    <h2>Imagens do Produto</h2>
     <div class="row images">
         @for (int i = 0; i < 4; i++)
         {
-        <div class="col-md-3">
-            <img src="~/img/image-default.png" class="img-thumbnail" />
-            <div class="btn btn-danger btn-image-delete">X</div>
-        </div>
-            
+            <div class="col-md-3">
+                <img src="~/img/image-default.png" class="img-thumbnail" />
+                <div class="btn btn-danger btn-image-delete">X</div>
+            </div>
+
         }
     </div>
     <br />
