List images in validation error

--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0" id="formMenu">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Pesquise aqui!" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="text" placeholder="O que você está procurando?">
                     <div id="searchButton" class="btn btn-outline-warning my-2 my-sm-0"><i class="fas fa-search"></i></div>
                     @*<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Pesquisar</button>*@
                     <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/Login" id="login"><i class="fas fa-user-alt"></i> Login</a>
