--- a/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
@@ -115,8 +115,26 @@
         </div>
         <h2>Imagens do Produto</h2>
         <p>Clique para adicionar uma imagem</p>
-        <div class="row images">
-            @for (int i = 0; i < 6; i++)
+        @{ 
+            List<Image> images = new List<Image>();
+            if (Model != null)
+            {
+                images = Model.Images.ToList();
+            }
+        }
+    <div class="row images">
+        @for (int i = 0; i < 6; i++)
+        {
+            @if (images.ElementAtOrDefault(i) != null)
+            {
+                <div class="col-md-2">
+                    <input type="file" class="input-file" />
+                    <img src="@images.ElementAtOrDefault(i).Path" class="img-thumbnail img-upload" />
+                    <div class="btn btn-danger alert-danger btn-image-delete">Deletar</div>
+                    <input type="text" name="image" value="@images.ElementAtOrDefault(i).Path" />
+                </div>
+            }
+            else
             {
                 <div class="col-md-2">
                     <input type="file" class="input-file" />
@@ -124,9 +142,9 @@
                     <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
                     <input type="text" name="image" />
                 </div>
-
             }
-        </div>
+        }
+    </div>
         <br />
         <button type="submit" class="btn btn-info">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
     </form>
