--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -3,8 +3,15 @@
     padding-bottom: 20px;
     background-color: #e9e9e9;
 }
-
-#formMenu  input[type= "search"] {
+.input-group.md-form.form-sm.form-2 input {
+    border: 1px solid #bdbdbd;
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+}
+    .input-group.md-form.form-sm.form-2 input.amber-border {
+        border: 1px solid #ffca28;
+    }
+#formMenu input[type= "text"] {
     border: 0;
     color: white;
     background: none;
@@ -18,8 +25,8 @@
     transition: 0.25s;
 }
 
-#formMenu input[type="search"]:focus {
-    width: 350px;
+#formMenu input[type="text"]:focus {
+     width: 350px;
 }
 a {
     color: #00CED1;
