Improvements in styles

--- a/mvCommerce/Views/Home/Login.cshtml
+++ b/mvCommerce/Views/Home/Login.cshtml
@@ -10,10 +10,10 @@
         <br />
         <br />
         <section class="container">
-            <aside class="col-sm-4">
-                <h3 class="subtitle-doc">
-                    Login
-                </h3>
+            <aside class="col-sm-6 login-card">
+                <p>
+                    Faça seu login
+                </p>
                 <div id="code_login_1">
                     <div class="card">
                         <article class="card-body">
