--- a/mvCommerce/Views/Home/RegisterClient.cshtml
+++ b/mvCommerce/Views/Home/RegisterClient.cshtml
@@ -9,14 +9,14 @@
     <form asp-action="RegisterClient" asp-controller="Home" method="post">
         <section class="container" style="margin-top: 50px">
             <div class="row">
-                <aside class="col-sm-6">
-                    <h3 class="subtitle-doc">
-                        Cadastre-se
-                    </h3>
+                <aside class="col-sm-8">
+                 
                     <div id="code_register_1">
                         <div class="card">
                             <header class="card-header">
-                                <a asp-controller="Home" asp-action="Login" class="float-right btn btn-outline-info my-2 my-sm-0">Login</a>
+                                <h3 class="subtitle-doc">
+                                    Cadastre-se
+                                </h3>
                             </header>
                             <article class="card-body">
                                 @if (TempData["MSG_S"] != null)
@@ -34,56 +34,60 @@
                                     <div class="col form-group">
                                         <label asp-for="BirthDate">Data de Nascimento</label>
                                         <input asp-for="BirthDate" type="text" class="form-control" placeholder="Data de Nascimento">
-                                        <span  asp-validation-for="BirthDate"></span>
+                                        <span asp-validation-for="BirthDate"></span>
                                     </div>
                                 </div>
-                                <div class="form-row col form-group">
+                                <div class="form-group ">
                                     <label asp-for="CPF">CPF</label>
-                                    <input asp-for="CPF" type="text" class="form-control" placeholder="">
-                                    <span  asp-validation-for="CPF"></span>
+                                    <input asp-for="CPF" type="text" class="form-control col-4" placeholder="">
+                                    <span asp-validation-for="CPF"></span>
                                 </div>
 
                                 <label>Sexo</label>
                                 <div class="form-group">
-                                    <label class="form-check form-check-inline">
+                                    <span class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" asp-for="Sex" value="M">
-                                        <span > Masculino </span>
-                                    </label>
-                                    <label class="form-check form-check-inline">
+                                        <span> Masculino </span>
+                                    </span>
+                                    <span class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" asp-for="Sex" value="F">
-                                        <span > Feminino </span>
-                                    </label>
+                                        <span> Feminino </span>
+                                    </span>
                                     <br />
                                     <span asp-validation-for="Sex"></span>
                                 </div>
 
-                                <div class="col form-group col-sm-5">
+
+                                <div class="form-group">
                                     <label asp-for="Phone">Telefone</label>
-                                    <input asp-for="Phone" type="text" class="form-control" placeholder="">
-                                    <span  asp-validation-for="Phone"></span>
+                                    <input asp-for="Phone" type="text" class="form-control col-4" placeholder="">
+                                    <span asp-validation-for="Phone"></span>
                                 </div>
 
                                 <div class="form-group">
                                     <label asp-for="Email">Email</label>
-                                    <input asp-for="Email" type="email" class="form-control" placeholder="">
-                                    <span  asp-validation-for="Email"></span>
-                                    <small>
-                                        Nunca compartilhe seu email com outras pessoas.
-                                    </small>
+                                    <input asp-for="Email" type="email" class="form-control col-7" placeholder="">
+                                    <span asp-validation-for="Email"></span>
                                 </div>
 
                                 <div class="form-group">
                                     <label asp-for="Password">Criar senha</label>
-                                    <input asp-for="Password" class="form-control" type="password">
-                                    <span  asp-validation-for="Password"></span>
+                                    <input asp-for="Password" class="form-control col-7" type="password">
+                                    <span asp-validation-for="Password"></span>
                                     <small>
                                         Nunca compartilhe sua senha com outras pessoas.
                                     </small>
                                 </div>
-
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block btn btn-info my-2 my-sm-0"> Cadastrar </button>
+                                <br />
+                                <br />
+                                <div class="container col-7">
+                                    <div class="row">
+                                        <div class="col text-center">
+                                            <button type="submit" class="btn btn-primary btn-block btn-info "> Cadastrar </button>
+                                        </div>
+                                    </div>
                                 </div>
+                            
                             </article>
                             <div class="border-top card-body text-center ">Já possui uma conta? <a asp-controller="Home" asp-action="Login">Clique aqui</a></div>
                         </div>
