--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -3,14 +3,13 @@
     padding-bottom: 20px;
     background-color: #e9e9e9;
 }
-.input-group.md-form.form-sm.form-2 input {
-    border: 1px solid #bdbdbd;
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
+label{
+    color:black;
+    text-shadow:0.5px 0px 0px black;
 }
-    .input-group.md-form.form-sm.form-2 input.amber-border {
-        border: 1px solid #ffca28;
-    }
+button {
+    box-shadow: 3px 3px 3px #a9a9a9;
+}
 #formMenu input[type= "text"] {
     border: 0;
     color: white;
@@ -49,8 +48,11 @@ hr {
 }
 
 .box {
-    box-shadow: 1px 1px 1px 2px #d3d3d3;
+    box-shadow: 1px 2px 1px 3px #d3d3d3;
 }
 #categoriesDropdown {
     background-color: #9980FA;
+}
+aside{
+    margin:auto;
 }
