Creating component for categories view

--- a/mvCommerce/Areas/Collaborator/Views/Home/Login.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Home/Login.cshtml
@@ -12,9 +12,9 @@
         <br />
         <section class="container">
             <aside class="col-sm-6">
-                <h3 class="subtitle-doc">
-                    Login do Colaborador
-                </h3>
+                <p class="subtitle-doc">
+                    Entre com seu Login de Colaborador
+                </p>
                 <div id="code_login_1">
                     <div class="card">
                         <article class="card-body">
